<resources>
    <string name="app_name">Module4Eqp2</string>

    <string name="title">Equipo 2</string>
    <string name="equip">Integrantes:</string>
    <string name="member1">Olvera Meza Allison Montserrat</string>
    <string name="member2">Atondo Gastelum Oliver Daniel</string>
    <string name="member3">Perez Valdez Edgar Michael</string>
    <string name="member4">Hernández Calderón Fernando</string>

    <string name="btnBack">Regresar</string>
    <string name="btnActivity">Lanzar actividad</string>

    <!-- Strings Excercise 1 FHC-->
    <string name="initialTitle">Hola!</string>
    <string name="btnNavegador">Ir a YouTube</string>
    <string name="btnExit">Salir</string>
    <string name="txtDefault">default</string>


    <!-- Strings homework FHC-->
    <string name="signupHW">Registro</string>
    <string name="nameHW">Nombre</string>
    <string name="lastnameHW">Apellido(s)</string>
    <string name="fullnameHW">Nombre completo</string>
    <string name="emailHW">Correo eléctronico</string>
    <string name="genderHW">Genero</string>
    <string name="tpasswordHW">Establecer contraseña</string>
    <string name="passwordHW">Contraseña</string>
    <string name="repasswordHW">Confirmar contraseña</string>
    <string name="genderHHW">Hombre</string>
    <string name="genderWHW">Mujer</string>
    <string name="genderOHW">Otro</string>
    <string name="registerHW">Registrar</string>
    <string name="descriptionSignUpHW">Icono de usuario</string>
    <string name="showPassHW">Mostrar contraseña</string>
    <string name="accountHW">Cuenta</string>
    <string name="exercise">Ejercicios</string>
    <string name="homework">Tarea</string>
    <string name="finalExercise">Ejercicio Final</string>
    <string name="goExercise1">Ir a ejercicio 1</string>
    <string name="goExercise2">Ir a ejercicio 2</string>
    <string name="goHomeWork">Ir a Tarea</string>
    <string name="goFinalExercise">Ir a Ejercicio final</string>

    <!-- Strings Excercise 2 FHC -->
    <string name="frameLTitle">Frame Layout</string>
    <string name="linearLTitle">Linear Layout</string>
    <string name="relativeLTitle">Relative Layout</string>
    <string name="constraintLTitle">Constraint Layout</string>
    <string name="btnSiguiente">Siguiente Layout</string>
    <string name="avance">Uso de componentes</string>
    <string name="edittext">Escribe tu nombre</string>
    <string name="cbAgree">Acepto los términos y condiciones</string>
    <string name="cbPrivacy">Politica de privacidad</string>


    <!-- Strings errores -->
    <string name="errPasswordHW">Error en contraseña</string>
    <string name="errPasswordLengthHW">longitud insuficiente</string>
    <string name="errPasswordSecurityHW">Contraseña no segura</string>
    <string name="errPasswordDifferentHW">Las contraseñas no coinciden</string>
    <string name="errEmptyHW">Campo requerido</string>
    <string name="errEmailHW">Correo inválido</string>
    <string name="errGenderHW">Genero requerido</string>
    <string name="errGeneralHW">Revise datos ingresados</string>

    <string name="hint_nombre">Nombre</string>
    <string name="hint_apellido">Apellido</string>
    <string name="hint_correo">Correo electrónico</string>
    <string name="hint_contraseña">Contraseña</string>
    <string name="button_registrar">Registrar</string>


    <!-- Strings Ejercicio Final -->
    <string name="btnFinalExercise">Ejercicio final</string>
    <string name="imgDescUserIcon">Icono de usuario</string>
    <string name="userInput">Usuario</string>
    <string name="userLogin">Usuario/Correo electrónico</string>
    <string name="btnLogIn">Iniciar sesión</string>
    <string name="btnSignUp">Registrarse</string>
    <string name="tvHaventAccount">¿No tienes una cuenta?.</string>>
    <string name="tvLogin">Ingresar</string>
    <string name="tvName">Nombre</string>
    <string name="tvLastName">Apellido(s)</string>
    <string name="tvFullname">Nombre completo</string>
    <string name="tvPassword">Contraseña</string>
    <string name="tvRePassword">Confirmar Contraseña</string>
    <string name="tvEmail">Correo eléctronico</string>
    <string name="genderH">Hombre</string>
    <string name="genderW">Mujer</string>
    <string name="genderO">Otro</string>
    <string name="gender">Genero</string>
    <string name="tpassword">Establecer contraseña</string>
    <string name="createAccount">Crear cuenta</string>
    <string name="account">Cuenta</string>
    <string name="ErrorInfo">Ocurrio un error</string>
    <string name="NoSelection">No selección</string>
    <string name="TermAndCond">Acepto los términos y condiciones</string>
    <string name="Conditions">Debes aceptar los términos y condiciones</string>
    <string name="selecterInvalidC">Por favor selecciona un país</string>
    <string name="tcountry">País</string>
    <string-array name="countries_array">
        <item>No selección</item>
        <item>Alemania</item>
        <item>Argentina</item>
        <item>Australia</item>
        <item>Bolivia</item>
        <item>Brasil</item>
        <item>Canadá</item>
        <item>Chile</item>
        <item>Colombia</item>
        <item>Costa Rica</item>
        <item>Cuba</item>
        <item>Ecuador</item>
        <item>El Salvador</item>
        <item>España</item>
        <item>Estados Unidos</item>
        <item>Francia</item>
        <item>Guatemala</item>
        <item>Honduras</item>
        <item>India</item>
        <item>Italia</item>
        <item>México</item>
        <item>Nicaragua</item>
        <item>Panamá</item>
        <item>Paraguay</item>
        <item>Perú</item>
        <item>Puerto Rico</item>
        <item>Reino Unido</item>
        <item>República Dominicana</item>
        <item>Uruguay</item>
        <item>Venezuela</item>
    </string-array>

</resources>