<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="16dp">

    <Button
        android:id="@+id/btnSalir"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnExit"
        android:backgroundTint="@android:color/darker_gray"
        android:textColor="@android:color/white"
        android:layout_marginBottom="16dp"/>

    <EditText
        android:id="@+id/editNombre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="48dp"
        android:hint="@string/hint_nombre"
        android:inputType="textPersonName"
        android:autofillHints="name"
        android:textColor="@android:color/black"/>

    <EditText
        android:id="@+id/editApellido"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="48dp"
        android:hint="@string/hint_apellido"
        android:inputType="textPersonName"
        android:autofillHints="name"
        android:textColor="@android:color/black"/>

    <EditText
        android:id="@+id/editCorreo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="48dp"
        android:hint="@string/hint_correo"
        android:inputType="textEmailAddress"
        android:autofillHints="emailAddress"
        android:textColor="@android:color/black"/>

    <Spinner
        android:id="@+id/spinnerSexo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="48dp"/>

    <EditText
        android:id="@+id/editContraseña"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="48dp"
        android:hint="@string/hint_contraseña"
        android:inputType="textPassword"
        android:autofillHints="password"
        android:textColor="@android:color/black"/>

    <CheckBox
        android:id="@+id/cbMostrarContraseña"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/showPassHW"/>

    <Button
        android:id="@+id/btnRegistrar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="48dp"
        android:text="@string/button_registrar"/>

    <Button
        android:id="@+id/btnAtras"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="48dp"
        android:backgroundTint="@color/black"
        android:text="@string/btnBack"/>

</LinearLayout>
