<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".excercise.home.fernando_hernandez.InitialActivityFHC">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center_horizontal">

        <TextView
            android:id="@+id/tvInitialTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40sp"
            android:text="@string/member4"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/tvExercise"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40sp"
            android:text="@string/exercise"
            android:textSize="20sp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="10sp"
            android:gravity="center_horizontal">

            <Button
                android:id="@+id/btnExercise1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="30sp"
                android:backgroundTint="@color/blue"
                android:text="@string/goExercise1" />

            <Button
                android:id="@+id/btnExercise2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/red"
                android:text="@string/goExercise2" />
        </LinearLayout>

        <TextView
            android:id="@+id/tvHomeWork"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40sp"
            android:text="@string/homework"
            android:textSize="20sp" />
        <Button
            android:id="@+id/btnHomeWork"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10sp"
            android:backgroundTint="@color/green"
            android:text="@string/goHomeWork" />

        <TextView
            android:id="@+id/tvFinalExercise"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40sp"
            android:text="@string/finalExercise"
            android:textSize="20sp" />

        <Button
            android:id="@+id/btnFinalExercise"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10sp"
            android:backgroundTint="@color/orange"
            android:text="@string/goFinalExercise"/>

        <Button
            android:id="@+id/btnExit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50sp"
            android:backgroundTint="@color/black"
            android:text="@string/btnExit" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>